--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-streamlit
-yfinance
-scikit-learn
-yfinance
-pandas
-numpy
-matplotlib
-scipy
+streamlit==1.4.0
+yfinance==0.1.63
+scikit-learn==0.24.2
+pandas==1.2.4
+numpy==1.20.3
+matplotlib==3.4.2
+scipy==1.6.3
